<?xml version="1.0"?>
<package format="2">
  <name>lockmount_description</name>
  <version>0.0.2</version>
  <description>URDF Macro for adding an adjustable, locking mount used for cameras and other sensors</description>
  <maintainer email="civerachb@clearpathrobotics.com">Chris Iverach-Brereton</maintainer>
  <author email="civerachb@clearpathrobotics.com">Chris Iverach-Brereton</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>

</package>
